tests/NormalTests/paczka2/big_fuzzy/47841922.err
Error in line 36: TqKOk4sV S110 64,2
Error in line 42: xNmrPxAgpA1 A135 98,7
Error in line 45: xNmrPxAgpA1 S110 32,8
Error in line 44: VWQdja6B A654 70,5
Error in line 57: AYYpSrWSE A746 46,7
Error in line 55: VWQdja6B A654 63,3
Error in line 72: xNmrPxAgpA1 A135 6,4
Error in line 68: P107CcJpeYu S110 61,5
Error in line 63: AYYpSrWSE S110 45,0
Error in line 91: TqKOk4sV A746 79,3
Error in line 100: TqKOk4sV S110 3,4
Error in line 99: e53R1xQ A654 80,1
Error in line 105: e53R1xQ A135 44,1
Error in line 108: A654 A135 135,13
Error in line 98: xNmrPxAgpA1 S110 141,9
Error in line 114: xNmrPxAgpA1 A135 20,1
Error in line 119: A654 A746 84,4
Error in line 128: TqKOk4sV A746 64,7
Error in line 123: A654 A135 34,6
Error in line 142: e53R1xQ A746 58,0
Error in line 147: A654 S110 3,5
Error in line 121: VWQdja6B A746 35,8
Error in line 149: A654 A135 45,7
Error in line 152: VWQdja6B A135 90,1
Error in line 157: e53R1xQ S110 76,0
Error in line 174: e53R1xQ A654 19,2
Error in line 178: xNmrPxAgpA1 A746 52,8
Error in line 188: xNmrPxAgpA1 A746 78,2
Error in line 191: A654 A654 32,1
Error in line 189: xNmrPxAgpA1 A654 80,6
Error in line 199: e53R1xQ A746 31,96
Error in line 201: VWQdja6B A654 37,3
Error in line 204: AYYpSrWSE A654 83,2
Error in line 192: A654 S110 33,6
Error in line 216: xNmrPxAgpA1 A746 35,4
Error in line 212: e53R1xQ A746 108,7
Error in line 236: VWQdja6B S110 88,5
Error in line 238: TqKOk4sV S110 28,8
Error in line 245: TqKOk4sV A13` 32,2
Error in line 240: xNmrPxAgpA1 A654 4,9
